<resources>
    <string name="app_name">HADD</string>
    <string name="high_definition_audio_detection_director">High-definition Audio Detection Director</string>
    <string name="connect_to_hadd">Toggle bluetooth</string>
    <string name="title_activity_themechange">Themechange</string>
    <string name="title_activity_settings">Instellingen</string>
    <string name="Sleepmodecheckboxtitle">Slaapmodus</string>
    <string name="Vibrationstrengthtitle">Trillingstterkte</string>
    <string name="Decibelsregisteredtitle">Decibelregistratie</string>
    <string name="donkerblauw">Donkerblauw</string>
    <string name="lichtblauw">Lichtblauw</string>
    <string name="donkergroen">Donkergroen</string>
    <string name="lichtgroen">Lichtgroen</string>
    <string name="geel">Geel</string>
    <string name="roze">Roze</string>
    <string name="zwart">Zwart</string>
    <string name="rood">Rood</string>
    <string name="paars">Paars</string>
    <string name="oranje">Oranje</string>
    <string name="grijs">Grijs</string>
    <string name="bruin">Bruin</string>
    <string name="basisthema">Basisthema</string>

    <string-array name="themes">
        <item>DrarkBlue</item>
        <item>LightBlue</item>
        <item>DarkGreen</item>
        <item>LightGreen</item>
        <item>Yellow</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Orange</item>
        <item>Grey</item>
        <item>Brown</item>
        <item>Default</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="thema_veranderen">Thema veranderen</string>
    <string name="settings">Instellingen</string>
    <string name="sleepmode">Slaapmodus</string>
    <string name="trillingssterkte">Trillingssterkte</string>
    <string name="geluidsregistratie">Ondergrens geregistreerde decibels</string>
    <string name="about">Test fragment Profile</string>
    <string name="over_ons">Over ons</string>
    <string name="over_ons_tekst">Wij zijn de makers van de HADD (High-Definition Audio Detection Director. Wij hebben de HADD vooral gemaakt om auditief beperkte mensen te helpen om toch input van geluid te ervaren. Ons team bestaat uit een paar gedreven studenten van de Hogeschool Rotterdam.</string>
    <string name="over_ons_tekst1">Wij hopen dat onze uitvinding u bevalt en dat u er veel plezier mee heeft. De groeten van Alex Hui, Oguzcan Karakoc, Hoes Öztürk, Liam de Waal, Remco de Zeeuw en Danny Zoetmulder.
</string>
    <string name="threshold">Threshold</string>

</resources>
